# GERTY

./: .gitignore  .travis.yml  LICENSE  README.md
gerty/: Cargo.toml  Dockerfile  clean_up.sh  docker-compose.yml
gerty/src/: main.rs
