[package]
name = "gerty"
version = "0.1.0"
authors = ["maxwellflitton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.1.0"
# mini-redis = "0.4.1"
hyper = {version = "0.14", features = ["full"]}
futures = "0.3.17"
serde_json = "1.0.59"
